# Snake

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: net_arch_performance.csv
data/training_metrics/: base_dqn.csv  coil_reset_dqn.csv  dqn_coil_reset_metrics.csv  dqn_default_500.csv  dqn_first_benchmark_metrics.csv  dqn_line_reset_metrics.csv  dqn_new_reward_func.csv  dqn_transformed_state.csv  line_reset_dqn.csv  new_reward_dqn.csv  ppo_256_128_1m.csv  ppo_default_500.csv  rotated_state_dqn.csv
notebooks/: HypOpt_round1.ipynb  Imitation Learning.ipynb  Report.ipynb  basic_model.ipynb  environment_sandbox.ipynb  sandbox.ipynb
notebooks/notebooks_ignore/: environment_sandbox.ipynb  sandbox.ipynb
src/: definitions.py
src/callbacks/: callbacks.py
src/environment/: game_environment.py
src/evaluation/: evaluation.py
src/models/: custom_features_extractor.py  custom_policy.py
src/snake/environment/: base_game_environment.py  game_environment.py  reset_utils.py  utils.py
src/snake/visualisation/: state_visualisation.py
